--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>
                 <a href="#animais">Animais</a></li>
             <li data-dropdown>
-                <a href="sobre.html">Sobre</a>
+                <a href="">Sobre</a>
                 <ul class="dropdown-menu">
                     <li><a href="empresa.html">Empresa</a></li>
                     <li><a href="equipe.html">Equipe</a></li>
@@ -33,7 +33,7 @@
                 <a href="#contato">Contato</a>
             </li>    
             <li>    
-                <a href="" data-modal="abrir">Dev →</a>
+                <a href="" data-modal="abrir">Login <span class="arrow-black"></span></a>
             </li>
         </ul>
     </nav>
@@ -149,7 +149,7 @@
     </div>
     <section class="container-modal" data-modal="conatiner">
         <form action="">
-        <button class="fechar" data-modal="fechar">x</button>
+        <button class="fechar" data-modal="fechar"></button>
             <label for="email">Email</label>
             <input type="email" for="email" id="email">
             <label for="senha">Senha</label>
